fix: align search boxes spinner inside inputs
This fix makes sure that using a different color tone for the inner input area (not like in the default WA design), the spinner animation won't look too close to its border.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1229,6 +1229,9 @@ ac5 = var(--ac-5)
             border-bottom: 1px solid bg5 i
             &::after { display: none i }
 
+            /// Align 'loading results' spinner inside input.
+            ._1pp2N { padding-right: 5px }
+
             /// Remove animation.
             /._1yO24 { animation: none i }
         }
